Update with released tracing-serde-structured

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,6 @@ version = "1.0.137"
 default-features = false
 features = ["derive"]
 
-[dependencies.tracing-serde]
-# git = "https://github.com/tokio-rs/tracing/"
-# version = "0.2.0"
-# branch = "master"
-path = "./../../tracing/tracing-serde"
+[dependencies.tracing-serde-structured]
+version = "0.1"
 default-features = false
