--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,23 @@
 [package]
 name = "tracing-serde-wire"
 version = "0.1.0"
+authors = ["James Munns <james@onevariable.com>"]
 edition = "2021"
+readme = "README.md"
+repository = "https://github.com/jamesmunns/tracing-serde-wire"
+description = "Wire types for use with tracing-serde-structured"
+license = "Apache-2.0"
+categories = [
+    "no-std",
+]
+keywords = [
+    "tracing"
+]
+documentation = "https://docs.rs/tracing-serde-wire/"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[package.metadata.docs.rs]
+all-features = true
 
 [dependencies]
 
